update API docs and JSON schema for booking update by staff
